# radio-scheduler

./: .gitignore  LICENSE  LICENSE.md  README.md  README.pl.md  build_release.sh  config.yaml  install.sh  mpc_controller.py  pyproject.toml  quick-switch.sh  radio-scheduler-gui.py  radio-scheduler-tray.py  radio-scheduler.py  radio-scheduler_en.ts  radio-scheduler_pl.ts  translations.py
